force-app/main/default/objects/Account/fields/Beds_Available__c.field-meta.xml
<CustomField>
    <fullName>Beds_Available__c</fullName>
    <label>Beds Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>