force-app/main/default/objects/Account/fields/Beds_in_Use__c.field-meta.xml
<CustomField>
    <fullName>Beds_in_Use__c</fullName>
    <label>Beds in Use</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>