force-app/main/default/objects/Account/fields/Beds_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Beds_Inactive__c</fullName>
    <description>For example a closed ward that isn&#39;t staffed.</description>
    <inlineHelpText>For example a closed ward that isn&#39;t staffed.</inlineHelpText>
    <label>Beds Inactive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>