force-app/main/default/objects/Account/fields/Beds_Total__c.field-meta.xml
<CustomField>
    <fullName>Beds_Total__c</fullName>
    <label>Beds Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>