force-app/main/default/objects/Account/fields/Contingency_Plan__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Plan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contingency Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>