force-app/main/default/objects/Account/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>If multiple departments are added and part of the same division, that division name can be entered here.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If multiple departments are added and part of the same division, that division name can be entered here.</inlineHelpText>
    <label>Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>