force-app/main/default/objects/Account/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>A unique external ID such as a hospital ID.</description>
    <externalId>true</externalId>
    <inlineHelpText>A unique external ID such as a hospital ID.</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>