force-app/main/default/objects/Account/fields/Health_Authority__c.field-meta.xml
<CustomField>
    <fullName>Health_Authority__c</fullName>
    <description>Text version of the top level health authority, system field for sharing rules. A workflow rule populates this field based on the facility hierarchy.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Text version of the top level health authority, system field for sharing rules. A workflow rule populates this field based on the facility hierarchy.</inlineHelpText>
    <label>Health Authority</label>
    <length>50</length>
    <type>Text</type>
</CustomField>