force-app/main/default/objects/Account/fields/Medical_Staff_Compensation_Model__c.field-meta.xml
<CustomField>
    <fullName>Medical_Staff_Compensation_Model__c</fullName>
    <description>Deprecated field for Traction Thrive</description>
    <label>DEPRECATED Medical Staff Compensation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salaried</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Fee for Service</fullName>
            </value>
            <value>
                <fullName>Program Dollars</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>