force-app/main/default/objects/Account/fields/Medical_Staff_Redeployment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Medical_Staff_Redeployment_Comments__c</fullName>
    <description>Capture any notes on potential for staff redeployments, limitations, skills</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Capture any notes on potential for staff redeployments, limitations, skills</inlineHelpText>
    <label>Medical Staff Redeployment Comments</label>
    <type>TextArea</type>
</CustomField>