force-app/main/default/objects/Account/fields/Parent_Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Facility_Name__c</fullName>
    <description>Plain text for Parent Account Name</description>
    <formula>Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Plain text for Parent Account Name</inlineHelpText>
    <label>Parent Facility</label>
    <type>Text</type>
</CustomField>