force-app/main/default/objects/Account/fields/Regional_Health_Authority_Name__c.field-meta.xml
<CustomField>
    <fullName>Regional_Health_Authority_Name__c</fullName>
    <formula>IF (RecordType.DeveloperName = &quot;Regional_Health_Authority&quot;,  Name , IF( Parent.RecordType.DeveloperName = &quot;Regional_Health_Authority&quot;, Parent.Name,Parent.Parent.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regional Health Authority Name</label>
    <type>Text</type>
</CustomField>