force-app/main/default/objects/Account/recordTypes/Regional_Health_Authority.recordType-meta.xml
<RecordType>
    <fullName>Regional_Health_Authority</fullName>
    <active>true</active>
    <label>Regional Health Authority</label>
</RecordType>