force-app/main/default/objects/Account/validationRules/Block_edits_to_Parent_Facility.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_edits_to_Parent_Facility</fullName>
    <active>true</active>
    <description>Blocks users from editing the Parent Facility field.</description>
    <errorConditionFormula>!ISBLANK( PRIORVALUE( ParentId ) ) &amp;&amp;
ISCHANGED( ParentId )</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>Unable to edit an existing Parent Facility. Please edit the values of the Parent Facility record itself.</errorMessage>
</ValidationRule>