force-app/main/default/objects/Account/validationRules/Only_Health_Auths_can_parent_Hospitals.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Health_Auths_can_parent_Hospitals</fullName>
    <active>true</active>
    <description>Ensures that only Regional Health Authority Facilities can be a parent of Hospital Facilities.</description>
    <errorConditionFormula>CONTAINS( RecordType.DeveloperName, &quot;Hospital&quot; ) &amp;&amp;
!( ISBLANK( ParentId ) || ISNULL( ParentId) ) &amp;&amp;
!CONTAINS( Parent.RecordType.DeveloperName, &quot;Regional_Health_Authority&quot; )</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>Invalid Parent Facility. Only Regional Health Authorities can be a parent of Hospitals.</errorMessage>
</ValidationRule>