force-app/main/default/objects/Account/validationRules/Only_Hospitals_can_parent_Divisions.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Hospitals_can_parent_Divisions</fullName>
    <active>true</active>
    <description>Ensures that only Hospital Facilities can be a parent to a Division Facility.</description>
    <errorConditionFormula>CONTAINS( RecordType.DeveloperName, &quot;Division&quot; ) &amp;&amp;
!( ISBLANK( ParentId ) || ISNULL( ParentId ) ) &amp;&amp;
!CONTAINS( Parent.RecordType.DeveloperName, &quot;Hospital&quot; )</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>Invalid Parent Facility. Only Hospitals can be a parent of Divisions.</errorMessage>
</ValidationRule>