force-app/main/default/objects/Account/listViews/All_Facilities.listView-meta.xml
<ListView>
    <fullName>All_Facilities</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Parent_Facility_Name__c</columns>
    <columns>Health_Authority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Facilities</label>
</ListView>