force-app/main/default/objects/Account/listViews/Departments_v2.listView-meta.xml
<ListView>
    <fullName>Departments_v2</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Parent_Facility_Name__c</columns>
    <columns>Health_Authority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Division</value>
    </filters>
    <label>Detailed Department List</label>
</ListView>