force-app/main/default/objects/Account/listViews/Hospital_Ventilator_Beds.listView-meta.xml
<ListView>
    <fullName>Hospital_Ventilator_Beds</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Beds_Available__c</columns>
    <columns>Beds_in_Use__c</columns>
    <columns>Beds_Total__c</columns>
    <columns>Beds_Inactive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Hospital</value>
    </filters>
    <label>Hospital Ventilator Beds</label>
</ListView>