force-app/main/default/objects/Account/listViews/Hospitals_v2.listView-meta.xml
<ListView>
    <fullName>Hospitals_v2</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Parent_Facility_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Hospital</value>
    </filters>
    <label>Hospitals</label>
</ListView>