force-app/main/default/objects/Account/listViews/Regional_Health_Authorities_v2.listView-meta.xml
<ListView>
    <fullName>Regional_Health_Authorities_v2</fullName>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Regional_Health_Authority</value>
    </filters>
    <label>Detailed Regional Health Authority List</label>
</ListView>